test/sema/traits/member_fn_parent_trait_argument_no_conformance.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

struct S<T : A> {
  fn foo(x: T) {}
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: cannot satisfy constraint 'number : A'
  S::foo(0);
}
